--- a/src/components/Image Section/Imagesec.css
+++ b/src/components/Image Section/Imagesec.css
@@ -1,3 +1,5 @@
+
+
 .background{
     display: flex;
     background-color: rgba(193, 220, 220, 1);
@@ -76,7 +78,39 @@
   margin-left: 50px;
   margin-bottom: auto;
 }
-
+.searchBar{
+  position: relative;
+  width: 449px;
+  margin-top: 20px;
+}
+.searchBar input{
+  width: 100%;
+  height: 64px;
+  padding: 0 20px 0 60px;
+  margin-top: 20px;
+  border: none;
+  border-radius: 20px;
+  box-sizing: border-box;
+}
+.searchBar input::placeholder{
+  font-size: medium;
+  padding: 20px;
+}
+.searchBar .icon{
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  width: 40px;
+  height: 40px;
+  background: url('../../Assets/search.png') no-repeat center center;
+  background-size: 20px;
+  transform: translateY(-27%);
+  background-color: rgba(193, 220, 220, 1);
+  background-size: 20px;
+  border-radius: 20%;
+  pointer-events: none;
+  cursor: pointer;
+}
 .right-side{
  flex: 4;
  display: flex;
@@ -89,6 +123,7 @@
   display: flex;
   justify-content: center;
   align-items: flex-end;
+  position: relative;
 }
 .blackSpot{
   width: 450px;
@@ -101,14 +136,20 @@
 }
 
 .treeImage{
-  object-fit: cover;
+    object-fit: cover;
+    top: -32%;
+    left: 10%;
+    width: 100%;
+    max-width: 411px;
+    height: auto;
+    transform: translateX(0%);
+
     border-radius: inherit; /* Inherit border radius from parent */
     position: absolute;
     bottom: 0;
 }
 .tree{
-  width: 411px;
-  height: 514px;
-  margin-left: 80px;
-  margin-bottom: 70px;
+  width: 100%;
+  height: auto;
+  
 }
